--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.html
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.html
@@ -11,102 +11,13 @@
         </div>
       </li>
 
-      <li class="preview">
+      <!-- <li class="preview">
         <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
 
         <div class="remove-overlay">
           <i class="material-icons">close</i>
         </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-      
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
-      <li class="preview">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/91pXB%2BUIWhL._AC_UX625_.jpg">
-
-        <div class="remove-overlay">
-          <i class="material-icons">close</i>
-        </div>
-      </li>
-
+      </li> -->
 
       <label class="image-selector">
         <input type="file" multiple>
