--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -7,7 +7,48 @@
     width: 100%;
     height: 642px;
     font-size: 0.85rem;
+    background-color: #fff;
     overflow: hidden;
+
+    .add-btn {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      padding: 0.4rem;
+      color: #fff;
+      border: 2px solid #F72551;
+      background-color: #F72551;
+      transition: opacity .3s ease, 
+      background-color .3s ease;
+
+      &:disabled {
+        opacity: 0.6 !important;
+        cursor: default;
+      }
+
+      &::after {
+        content: '';
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0 6px 25px rgba(248, 96, 129, 0.815);
+        transition: opacity .4s ease;
+        z-index: -1;
+      }
+
+      &:not(:disabled):hover::after {
+        opacity: 1;
+      }
+    }
+
+    .add-btn-2 {
+      display: none;
+    }
 
     .column-s {
       width: 400px;
@@ -43,42 +84,6 @@
         textarea {
           resize: none;
         }
-
-        button {
-          position: relative;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          padding: 0.4rem;
-          color: #fff;
-          border: 2px solid #F72551;
-          background-color: #F72551;
-          transition: opacity .3s ease, 
-          background-color .3s ease;
-
-          &:disabled {
-            opacity: 0.6 !important;
-            cursor: default;
-          }
-
-          &::after {
-            content: '';
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            box-shadow: 0 6px 25px rgba(248, 96, 129, 0.815);
-            transition: opacity .4s ease;
-            z-index: -1;
-          }
-  
-          &:not(:disabled):hover::after {
-            opacity: 1;
-          }
-        }
       }
     }
 
@@ -106,6 +111,15 @@
       .column-s {
         padding: 1.5rem;
       }
+    }
+
+    .add-btn-1 {
+      display: none !important;
+    }
+
+    .add-btn-2 {
+      display: flex !important;
+      padding: 1.5rem;
     }
   }
 }
