--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -31,7 +31,7 @@
     align-items: center;
     width: 100%;
     height: 4rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 400;
     background-color: #fff;
 
@@ -165,7 +165,15 @@
     height: 642px;
   
     .preview-list {
-      grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
+
+      .preview, .image-selector {
+        height: 130px;
+      }
+
+      &.alternate {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   }
 }
