--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -24,7 +24,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      width: calc(45% - 1.5rem);
+      // width: calc(45% - 1.5rem);
       margin-right: 1.5rem;
       overflow: hidden;
 
