--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,28 +5,28 @@
     <h1 class="product-name-xl">{{ product.productName }}</h1>
 
     <section class="product-image-container">
-      <div *ngIf="productImages" class="small-container">
-        <div 
-          *ngFor="let image of productImages" class="item">
-          <img 
-            image-loader 
-            [src]="image"
-            [alt]="product.productName"
-            draggable="false">
-        </div>
-      </div>
-
-      <div class="big-container">
-        <div class="item">
+      <div class="product-images-area">
+        <div class="product-image-viewer">
           <img 
             image-loader 
             [src]="productImages[0]"
             [alt]="product.productName"
             draggable="false">
         </div>
+  
+        <div *ngIf="productImages" class="thumbnails-container">
+          <div 
+            *ngFor="let image of productImages" class="thumbnail">
+            <img 
+              image-loader 
+              [src]="image"
+              [alt]="product.productName"
+              draggable="false">
+          </div>
+        </div>
       </div>
 
-      <div class="product-details-container">
+      <div class="product-details">
         <article class="info">
           <p class="product-name">{{ product.productName }}</p>
   
