--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -17,141 +17,144 @@
   .product-image-container {
     display: flex;
     width: 100%;
-    height: 600px;
+    height: auto;
     user-select: none;
 
-    .small-container {
+    .product-images-area {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      // width: calc(45% - 1.5rem);
-      margin-right: 1.5rem;
-      overflow: hidden;
-
-      .item {
-        height: calc(50% - 0.75rem);
-      }
-    }
-
-    .big-container {
-      width: 55%;
-      overflow: hidden;
-    }
-    
-    .item {
-      display: flex;
-      align-items: center;
       width: 100%;
-      height: 100%;
-      padding: 1.5rem;
       background-color: #fff;
-      box-shadow: 0 0 25px rgba(190, 190, 190, 0.2);
-      overflow: hidden;
 
-      img {
+      .product-image-viewer {
         width: 100%;
-        max-height: 100%;
-        object-fit: contain;
-        object-position: center center;
-      }
-    }
-  }
-
-  .product-details-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-top: 1.5rem;
-    padding: 1.5rem;
-    background-color: #fff;
-    box-shadow: 0 0 25px rgba(190, 190, 190, 0.2);
-    overflow: hidden;
-
-    .info {
-      p:not(:last-of-type) {
-        margin-bottom: 1rem;
-      }
-
-      .product-name {
-        font-size: 1rem;
-        font-weight: 500;
-        line-height: 1.4rem;
-      }
-
-      .price {
-        margin-bottom: 1rem;
-        color: #333;
-        font-size: 1rem;
-        font-weight: 600;
-      }  
-
-      .stock-label {
-        color: #4da861;
-      }
-
-      .desc {
-        max-width: 500px;
-        margin-top: 1.5rem;
+        padding: 1rem;
         overflow: hidden;
-        
-        h3 {
-          margin-bottom: 0.5rem;
-        }
 
-        p {
-          line-height: 1.4rem;
-        }
-      }
-    }
-
-    .action-buttons {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 364px;
-      margin-left: 2rem;
-
-      button {
-        flex-shrink: 0;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 170px;
-        height: 40px;
-        border: 2px solid #F72551;
-
-        &::after {
-          content: '';
-          opacity: 0;
-          position: absolute;
-          top: 0;
-          left: 0;
+        img {
           width: 100%;
           height: 100%;
-          box-shadow: 0 6px 25px rgba(248, 96, 129, 0.815);
-          transition: opacity .4s ease;
-        }
-
-        &:hover::after {
-          opacity: 1;
+          object-fit: contain;
+          object-position: center center;
         }
       }
 
-      .buy-now-btn {
-        margin-right: 1rem;
-        color: #fff;
-        background-color: #F72551;
-      }
-
-      .add-to-cart-btn {
-        span {
-          color: #F72551
+      .thumbnails-container {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        height: 100px;
+        overflow: hidden;
+  
+        .thumbnail {
+          width: 100%;
+          height: inherit;
+  
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: center center;
+            padding: 0.5rem;
+          }
         }
+      }     
+    }
 
-        .material-icons {
-          color: #F72551;
+    .product-details {
+      display: flex;
+      justify-content: space-between;
+      // align-items: center;
+      width: 100%;
+      padding: 1.5rem;
+      background-color: #fff;
+      overflow: hidden;
+  
+      .info {
+        p:not(:last-of-type) {
+          margin-bottom: 1rem;
+        }
+  
+        .product-name {
+          font-size: 1rem;
+          font-weight: 500;
+          line-height: 1.4rem;
+        }
+  
+        .price {
+          margin-bottom: 1rem;
+          color: #333;
+          font-size: 1rem;
+          font-weight: 600;
+        }  
+  
+        .stock-label {
+          color: #4da861;
+        }
+  
+        .desc {
+          max-width: 500px;
+          margin-top: 1.5rem;
+          overflow: hidden;
+          
+          h3 {
+            margin-bottom: 0.5rem;
+          }
+  
+          p {
+            line-height: 1.4rem;
+          }
+        }
+      }
+  
+      .action-buttons {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 364px;
+        margin-left: 2rem;
+  
+        button {
+          flex-shrink: 0;
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 170px;
+          height: 40px;
+          border: 2px solid #F72551;
+  
+          &::after {
+            content: '';
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            box-shadow: 0 6px 25px rgba(248, 96, 129, 0.815);
+            transition: opacity .4s ease;
+          }
+  
+          &:hover::after {
+            opacity: 1;
+          }
+        }
+  
+        .buy-now-btn {
+          margin-right: 1rem;
+          color: #fff;
+          background-color: #F72551;
+        }
+  
+        .add-to-cart-btn {
+          span {
+            color: #F72551
+          }
+  
+          .material-icons {
+            color: #F72551;
+          }
         }
       }
     }
