--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -4,7 +4,7 @@
   <div class="wrapper">
     <h1 class="product-name-xl">{{ product.productName }}</h1>
 
-    <section class="product-image-container">
+    <section class="product-container">
       <div class="product-images-area">
         <div class="product-image-viewer">
           <img 
