--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -72,8 +72,8 @@
           width: 100%;
           padding: 0.4rem;
           font-size: 0.8rem;
-          border: thin solid #eef1f5;
-          background-color: #eef1f5;
+          border: thin solid #f7f9fd;
+          background-color: #f7f9fd;
           transition: border-color 0.3s ease;
           
           &:focus {
