--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ html::-webkit-scrollbar-thumb {
   position: fixed;
 }
 
-::-webkit-scrollbar-track-piece {
+::-webkit-scrollbar-track {
   background-color: transparent;
   border-radius: 0 !important;
   border: none !important;
