--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="wrapper">
-    <a routerLink="/">Product list</a>
+    <a routerLink="./product-list">Product list</a>
     <span> | </span>
     <a routerLink="./product-creation">Add new product</a>
     
