--- a/src/app/admin-page/product-list/product-list.component.html
+++ b/src/app/admin-page/product-list/product-list.component.html
@@ -1,5 +1,20 @@
+<section class="product-list-section">
+  <div class="slider">
+    <div class="slide">
+      <img src="assets/temp/1.jpg">
+    </div>
+    <div class="slide">
+      <img src="assets/temp/2.jpg">
+    </div>
+    <div class="slide">
+      <img src="assets/temp/3.jpg">
+    </div>
+    <div class="slide">
+      <img src="assets/temp/4.jpg">
+    </div>
+    <div class="slide">
+      <img src="assets/temp/5.jpg">
+    </div>
+  </div>
+</section>
 
-
-<div class="slider">
-  <div class="item"></div>
-</div>
