--- a/src/app/admin-page/product-list/product-list.component.scss
+++ b/src/app/admin-page/product-list/product-list.component.scss
@@ -1,3 +1,42 @@
+.product-list-section {
+  margin-top: 3rem; 
+}
+
 .slider {
+  display: flex;
+  width: 800px;
+  margin: auto;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+
+  -webkit-overflow-scrolling: touch;
+
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgba(34, 34, 34, 0.425);
+    border-radius: 10px;
+  }
   
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .slide {
+    scroll-snap-align: start;
+    flex-shrink: 0;
+    width: 100%;
+    height: 270px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
+    }
+  }
 }
