--- a/src/app/admin-page/product-list/product-list.component.html
+++ b/src/app/admin-page/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <section class="product-list-section">
-  <div class="slider">
+  <!-- <div class="slider">
     <div class="slide">
       <img src="assets/temp/1.jpg">
     </div>
@@ -15,6 +15,8 @@
     <div class="slide">
       <img src="assets/temp/5.jpg">
     </div>
-  </div>
+  </div> -->
+
+  <button (click)="onClick()">Get em!</button>
 </section>
 
