--- a/src/app/admin-page/product-list/product-list.component.html
+++ b/src/app/admin-page/product-list/product-list.component.html
@@ -2,15 +2,19 @@
   
   <ul>
     <li
-      style="display: flex; margin-bottom: 2rem; padding: 1rem; background-color: aliceblue;"
+      style="display: flex; justify-content: flex-start; margin-bottom: 2rem; padding: 1rem; background-color: #fff;"
       *ngFor="let product of products">
 
       <div class="image" style="width: 120px; height: 120px; overflow: hidden; margin-right: 1.5rem;">
-        <img style="width: 100%; height: 100%; object-fit: contain; object-position: center center;" [src]="product.productImage" [alt]="product.productName">
+        <img style="width: 100%; height: 100%; object-fit: contain; object-position: center center;"  [alt]="product.productName">
       </div>
       <strong>{{ product.productName }}</strong>
     </li>
   </ul>
+
+  <h1 
+    *ngIf="noMoreProducts"
+    style="text-align: center; margin: 2rem 0; font-weight: 400; font-size: 1.1rem;">No more products to display</h1>
 
   <app-spinner overlayStyle="fixed" [loading]="isloading"></app-spinner>
 </section>
