--- a/src/app/admin-page/product-list/product-list.component.html
+++ b/src/app/admin-page/product-list/product-list.component.html
@@ -6,7 +6,7 @@
       *ngFor="let product of products">
 
       <div class="image" style="width: 120px; height: 120px; overflow: hidden; margin-right: 1.5rem;">
-        <img style="width: 100%; height: 100%; object-fit: contain; object-position: center center;"  [alt]="product.productName">
+        <img image-loader style="width: 100%; height: 100%; object-fit: contain; object-position: center center;" [src]="product.productImage" [alt]="product.productName">
       </div>
       <strong>{{ product.productName }}</strong>
     </li>
