--- a/src/app/admin-page/product-list/product-list.component.html
+++ b/src/app/admin-page/product-list/product-list.component.html
@@ -2,6 +2,7 @@
   
   <ul>
     <li
+      #card
       style="display: flex; justify-content: flex-start; margin-bottom: 2rem; padding: 1rem; background-color: #fff;"
       *ngFor="let product of products">
 
@@ -19,3 +20,4 @@
   <app-spinner overlayStyle="fixed" [loading]="isloading"></app-spinner>
 </section>
 
+<div class="spacer" style="display: none; height: 2000px;"></div>
