--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -17,7 +17,7 @@
           class="product-image">
           <img 
             image-loader 
-            [src]="product.images[0].imageUrl" 
+            [src]="product.images[0]" 
             [alt]="product.productName">
         </a>
   
