--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <i class="material-icons">search</i>
       </button>
 
-      <button class="login-btn nav-btn" type="button">
+      <button routerLink="/admin-page"  class="login-btn nav-btn" type="button">
         <i class="material-icons">person</i>
       </button>
   
