--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -1,161 +1,280 @@
+// .product-detail-section {
+//   width: 100%;
+//   min-height: 100vh;
+//   margin: 2rem 0;
+//   padding: 70px 1rem 0;
+
+//   .product-name-xl {
+//     margin-bottom: 2.5rem;
+//     padding-bottom: 2rem;
+//     color: #2587f7;
+//     font-size: 1.5rem;
+//     font-weight: 400;
+//     line-height: 2rem;
+//     border-bottom: thin solid #fff;
+//   }
+
+//   .product-container {
+//     display: flex;
+//     width: 100%;
+//     height: 700px;
+//     padding: 1.5rem;
+//     background-color: #fff;
+//     user-select: none;
+
+//     .product-images-area {
+//       display: flex;
+//       flex-direction: column;
+//       width: 100%;
+      
+//       .product-image-viewer {
+//         width: 100%;
+//         height: inherit;
+//         overflow: hidden;
+
+//         img {
+//           width: 100%;
+//           height: 100%;
+//           object-fit: contain;
+//           object-position: center center;
+//         }
+//       }
+
+//       .thumbnails-container {
+//         display: flex;
+//         justify-content: space-between;
+//         width: 100%;
+//         height: 100px;
+//         overflow: hidden;
+  
+//         .thumbnail {
+//           width: 100%;
+//           height: inherit;
+  
+//           img {
+//             width: 100%;
+//             height: 100%;
+//             object-fit: contain;
+//             object-position: center center;
+//             padding: 0.5rem;
+//           }
+//         }
+//       }     
+//     }
+
+//     .product-details {
+//       display: flex;
+//       justify-content: space-between;
+//       width: 100%;
+//       background-color: #fff;
+//       overflow: hidden;
+  
+//       .info {
+//         p:not(:last-of-type) {
+//           margin-bottom: 1rem;
+//         }
+  
+//         .product-name {
+//           font-size: 1rem;
+//           font-weight: 500;
+//           line-height: 1.4rem;
+//         }
+  
+//         .price {
+//           margin-bottom: 1rem;
+//           color: #333;
+//           font-size: 1rem;
+//           font-weight: 600;
+//         }  
+  
+//         .stock-label {
+//           color: #4da861;
+//         }
+  
+//         .desc {
+//           max-width: 500px;
+//           margin-top: 1.5rem;
+//           overflow: hidden;
+          
+//           h3 {
+//             margin-bottom: 0.5rem;
+//           }
+  
+//           p {
+//             line-height: 1.4rem;
+//           }
+//         }
+//       }
+  
+//       .action-buttons {
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//         width: 364px;
+//         margin-left: 2rem;
+  
+//         button {
+//           flex-shrink: 0;
+//           position: relative;
+//           display: flex;
+//           justify-content: center;
+//           align-items: center;
+//           width: 170px;
+//           height: 40px;
+//           border: 2px solid #F72551;
+  
+//           &::after {
+//             content: '';
+//             opacity: 0;
+//             position: absolute;
+//             top: 0;
+//             left: 0;
+//             width: 100%;
+//             height: 100%;
+//             box-shadow: 0 6px 25px rgba(248, 96, 129, 0.815);
+//             transition: opacity .4s ease;
+//           }
+  
+//           &:hover::after {
+//             opacity: 1;
+//           }
+//         }
+  
+//         .buy-now-btn {
+//           margin-right: 1rem;
+//           color: #fff;
+//           background-color: #F72551;
+//         }
+  
+//         .add-to-cart-btn {
+//           span {
+//             color: #F72551
+//           }
+  
+//           .material-icons {
+//             color: #F72551;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
+@mixin ease-gradient($deg) {
+  background: linear-gradient(
+    $deg,
+    hsl(0, 0%, 100%) 0%,
+    hsla(0, 0%, 100%, 0.738) 19%,
+    hsla(0, 0%, 100%, 0.541) 34%,
+    hsla(0, 0%, 100%, 0.382) 47%,
+    hsla(0, 0%, 100%, 0.278) 56.5%,
+    hsla(0, 0%, 100%, 0.194) 65%,
+    hsla(0, 0%, 100%, 0.126) 73%,
+    hsla(0, 0%, 100%, 0.075) 80.2%,
+    hsla(0, 0%, 100%, 0.042) 86.1%,
+    hsla(0, 0%, 100%, 0.021) 91%,
+    hsla(0, 0%, 100%, 0.008) 95.2%,
+    hsla(0, 0%, 100%, 0.002) 98.2%,
+    hsla(0, 0%, 100%, 0) 100%
+  );
+}
+
 .product-detail-section {
   width: 100%;
-  min-height: 100vh;
   margin: 2rem 0;
   padding: 70px 1rem 0;
-
-  .product-name-xl {
-    margin-bottom: 2.5rem;
-    padding-bottom: 2rem;
-    color: #2587f7;
-    font-size: 1.5rem;
-    font-weight: 400;
-    line-height: 2rem;
-    border-bottom: thin solid #fff;
-  }
-
-  .product-container {
+  
+  .wrapper {
     display: flex;
     width: 100%;
-    height: 700px;
-    padding: 1.5rem;
+    height: auto;
     background-color: #fff;
-    user-select: none;
+    overflow: hidden;
 
-    .product-images-area {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      
-      .product-image-viewer {
-        width: 100%;
-        height: inherit;
-        overflow: hidden;
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: contain;
-          object-position: center center;
-        }
-      }
-
-      .thumbnails-container {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        height: 100px;
-        overflow: hidden;
-  
-        .thumbnail {
-          width: 100%;
-          height: inherit;
-  
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            object-position: center center;
-            padding: 0.5rem;
-          }
-        }
-      }     
-    }
-
-    .product-details {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
+    .product-images {
+      width: 50%;
+      height: auto;
       background-color: #fff;
-      overflow: hidden;
-  
-      .info {
-        p:not(:last-of-type) {
-          margin-bottom: 1rem;
-        }
-  
-        .product-name {
-          font-size: 1rem;
-          font-weight: 500;
-          line-height: 1.4rem;
-        }
-  
-        .price {
-          margin-bottom: 1rem;
-          color: #333;
-          font-size: 1rem;
-          font-weight: 600;
-        }  
-  
-        .stock-label {
-          color: #4da861;
-        }
-  
-        .desc {
-          max-width: 500px;
-          margin-top: 1.5rem;
-          overflow: hidden;
-          
-          h3 {
-            margin-bottom: 0.5rem;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center center;
+      }
+
+      .preview {
+        width: 100%;
+        height: 600px;
+        padding: 1.5rem;
+      }
+
+      .thumbnail-wrapper {
+        
+        position: relative;
+        width: 100%;
+        height: auto;
+
+        .nav-btns {
+          position: absolute;
+          top: 0;
+          width: 40px;
+          height: 100%;
+          z-index: 1;
+
+          &:first-of-type {
+            left: 0;
+            @include ease-gradient(90deg);
           }
-  
-          p {
-            line-height: 1.4rem;
+
+          &:last-of-type {
+            right: 0;
+            @include ease-gradient(-90deg);
           }
         }
       }
-  
-      .action-buttons {
+
+      .thumbnail-list {
+        position: relative;
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 364px;
-        margin-left: 2rem;
-  
-        button {
+        width: 100%;
+        height: auto;
+        padding: 0.5rem;
+        overflow: hidden;
+        overflow-x: auto;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+        scroll-behavior: smooth;
+        scroll-snap-type: x mandatory;
+        // background-color: inherit;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+        .thumbnail {
+          width: 130px;
+          height: 100px;
+          scroll-snap-align: start;
           flex-shrink: 0;
-          position: relative;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 170px;
-          height: 40px;
-          border: 2px solid #F72551;
-  
-          &::after {
-            content: '';
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            box-shadow: 0 6px 25px rgba(248, 96, 129, 0.815);
-            transition: opacity .4s ease;
+          
+          &:not(:last-of-type) {
+            margin-left: 0.5rem;
           }
-  
-          &:hover::after {
-            opacity: 1;
+          
+          &.active {
+
           }
         }
-  
-        .buy-now-btn {
-          margin-right: 1rem;
-          color: #fff;
-          background-color: #F72551;
-        }
-  
-        .add-to-cart-btn {
-          span {
-            color: #F72551
-          }
-  
-          .material-icons {
-            color: #F72551;
-          }
-        }
+
+        
       }
     }
-  }
+
+    .product-information {
+      width: 50%;
+      height: inherit;
+      background-color: #ddd;
+    }
+  }  
 }
