--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -163,19 +163,19 @@
 @mixin ease-gradient($deg) {
   background: linear-gradient(
     $deg,
-    hsl(0, 0%, 100%) 0%,
-    hsla(0, 0%, 100%, 0.738) 19%,
-    hsla(0, 0%, 100%, 0.541) 34%,
-    hsla(0, 0%, 100%, 0.382) 47%,
-    hsla(0, 0%, 100%, 0.278) 56.5%,
-    hsla(0, 0%, 100%, 0.194) 65%,
-    hsla(0, 0%, 100%, 0.126) 73%,
-    hsla(0, 0%, 100%, 0.075) 80.2%,
-    hsla(0, 0%, 100%, 0.042) 86.1%,
-    hsla(0, 0%, 100%, 0.021) 91%,
-    hsla(0, 0%, 100%, 0.008) 95.2%,
-    hsla(0, 0%, 100%, 0.002) 98.2%,
-    hsla(0, 0%, 100%, 0) 100%
+    hsl(0, 0%, 28%) 0%,
+    hsla(0, 0%, 28%, 0.738) 19%,
+    hsla(0, 0%, 28%, 0.541) 34%,
+    hsla(0, 0%, 28%, 0.382) 47%,
+    hsla(0, 0%, 28%, 0.278) 56.5%,
+    hsla(0, 0%, 28%, 0.194) 65%,
+    hsla(0, 0%, 28%, 0.126) 73%,
+    hsla(0, 0%, 28%, 0.075) 80.2%,
+    hsla(0, 0%, 28%, 0.042) 86.1%,
+    hsla(0, 0%, 28%, 0.021) 91%,
+    hsla(0, 0%, 28%, 0.008) 95.2%,
+    hsla(0, 0%, 28%, 0.002) 98.2%,
+    hsla(0, 0%, 28%, 0) 100%
   );
 }
 
@@ -219,7 +219,13 @@
           top: 0;
           padding: 0 0.5rem;
           height: 100%;
+          transition: opacity .4s ease;
           z-index: 1;          
+
+          &:disabled {
+            pointer-events: none;
+            opacity: 0;
+          }
 
           &:first-of-type {
             left: 0;
