--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -45,25 +45,25 @@
       .preview {
         width: 100%;
         height: 600px;
-
-        img {
-          padding: 1rem;
-          border: 1px solid #e7edff;
-          border-radius: 2px;
-        }
+        padding: 0.2rem;
+        border: 1px solid #e7edff;
+        border-radius: 2px;
+        overflow: hidden;
       }
 
       .thumbnail-wrapper {        
         position: relative;
         width: 100%;
         height: auto;
-        padding: 1rem 0;
+        margin-bottom: 1.5rem;
+        border-radius: 2px;
+        overflow: hidden;
 
         .nav-btns {
           position: absolute;
-          top: 1rem;
+          top: 0;
           padding: 0 0.5rem;
-          height: calc(100% - 2rem);
+          height: 100%;
           transition: opacity .4s ease;
           z-index: 1;          
 
@@ -116,6 +116,7 @@
         display: flex;
         width: 100%;
         height: auto;
+        border-radius: 2px;
         overflow: hidden;
         overflow-x: auto;
         scrollbar-width: none;
