--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -2,68 +2,75 @@
 
 <section *ngIf="!isLoading" class="product-detail-section">
   <div class="wrapper">
-
-    <div class="product-images">
-      <div class="thumbnail-wrapper">
-        <button 
-          (click)="onNavBtnClick('before')"
-          #navButton class="nav-btns nav-left" disabled>
-          <i class="material-icons">arrow_left</i>
-        </button>
-
-        <ul #thumbnailList class="thumbnail-list">        
-          <li 
-            (mouseover)="activePreview = index"
-            *ngFor="let thumbnail of product.images; index as index" 
-            class="thumbnail"
-            [class.active]="activePreview == index">
-            <img [src]="thumbnail" [alt]="product.productName">
-          </li>
-        </ul>
-
-        <button 
-          (click)="onNavBtnClick('next')"
-          #navButton class="nav-btns nav-right">
-          <i class="material-icons">arrow_right</i>
-        </button>
-      </div>
-
-      <div class="preview">
-        <img 
-          [src]="product.images[activePreview]" 
-          [alt]="product.productName">
+    <div class="banner">
+      <div class="banner-text">
+        <h3>New savings of up to 50% on Armazon Choice products</h3>
       </div>
     </div>
 
-    <div class="product-information">
-
-      <article class="info">
-        <p class="product-name">{{ product.productName }}</p>
-
-        <p>By {{ product.brand }}</p> 
-
-        <p>Price: <span class="price">{{ product.price | currency }}</span></p>
-        <p class="stock-label">{{ product.totalStock > 0 ? 'In stock' : 'Not in stock' }}</p>
-        
-        <div class="desc">
-          <h3>Product description:</h3>
-          <p>{{ product.productDesc }}</p>
+    <div class="details-container">
+      <div class="product-images">
+        <div class="preview">
+          <img 
+            [src]="product.images[activePreview]" 
+            [alt]="product.productName">
         </div>
-      </article>
-
-      <div class="action-buttons">
-        <button 
-          (click)="onBuyNow(product.productId)"
-          type="button" class="buy-now-btn">Buy Now</button>
-
-        <button 
-          (click)="onAddToCart(product.productId)"
-          type="button" class="add-to-cart-btn">
-          <i class="material-icons">add_shopping_cart</i>
-          <span>Add to cart</span>
-        </button>
+  
+        <div class="thumbnail-wrapper">
+          <button 
+            (click)="onNavBtnClick('before')"
+            #navButton class="nav-btns nav-left" disabled>
+            <i class="material-icons">arrow_left</i>
+          </button>
+  
+          <ul #thumbnailList class="thumbnail-list">        
+            <li 
+              (mouseover)="activePreview = index"
+              *ngFor="let thumbnail of product.images; index as index" 
+              class="thumbnail"
+              [class.active]="activePreview == index">
+              <img [src]="thumbnail" [alt]="product.productName">
+            </li>
+          </ul>
+  
+          <button 
+            (click)="onNavBtnClick('next')"
+            #navButton class="nav-btns nav-right">
+            <i class="material-icons">arrow_right</i>
+          </button>
+        </div>
+  
+        
       </div>
-      
+  
+      <div class="product-information">
+  
+        <div class="column">
+          <h3 class="product-name">{{ product.productName }}</h3>
+          <p class="brand">By <span>{{ product.brand }}</span></p> 
+          <p class="price">Price: <strong>{{ product.price | currency }}</strong></p>
+          <p class="stock-label">{{ product.totalStock > 0 ? 'In stock' : 'Not in stock' }}</p>
+          
+          <div class="description">
+            <h3>Description:</h3>
+            <p>{{ product.productDesc }}</p>
+          </div>
+        </div>
+  
+        <div class="action-buttons">
+          <button 
+            (click)="onBuyNow(product.productId)"
+            type="button" class="buy-now-btn">Buy Now</button>
+  
+          <button 
+            (click)="onAddToCart(product.productId)"
+            type="button" class="add-to-cart-btn">
+            <i class="material-icons">add_shopping_cart</i>
+            <span>Add to cart</span>
+          </button>
+        </div>
+  
+      </div>
     </div>
 
   </div>
