--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,3 +91,63 @@ img {
     opacity: 0;
   }
 }
+
+.banner {
+  position: relative;
+  width: 100%;
+  min-height: 250px;
+  margin-bottom: 3rem;
+  padding: 2rem;
+  overflow: hidden;
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  .banner-text {
+    position: relative;
+    width: 50%;
+    z-index: 1;
+
+    h3, p {
+      margin-bottom: 1.5rem;
+      color: #fff;
+      text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    }
+    
+    h3 {
+      font-size: 2.5rem;
+      font-weight: 600;
+      line-height: 2.5rem;        
+    }
+
+    p {
+      font-size: 1rem;
+      font-weight: 300;
+      line-height: 1.6rem;  
+    }
+
+    button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 170px;
+      height: 40px;
+      color: #fff;
+      border: 2px solid #F72551;
+    }
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+  }
+}
