--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -6,7 +6,8 @@
   height: 50px;
   padding: 0 1rem;
   overflow: hidden;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: saturate(180%) blur(20px);
   box-shadow: 0 1px 20px rgba(190, 190, 190, 0.2);
   z-index: 100;
 
