--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -31,11 +31,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('../../assets/img/banner.webp') center center/cover;
+    background: url('../../assets/img/banner-3.webp') center center/cover;
 
     h3 {
-      font-size: 2rem;
+      color: #222;
+      line-height: 4rem;
       text-align: center;
+      text-shadow: none;
     }
   }
 
@@ -192,7 +194,7 @@
         .price, 
         .stock-label, 
         .description {
-          margin-bottom: 0.5rem;
+          margin-bottom: 1rem;
         }
 
         .product-name {
