--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -192,8 +192,7 @@
         .product-name, 
         .brand, 
         .price, 
-        .stock-label, 
-        .description {
+        .stock-label {
           margin-bottom: 1rem;
         }
 
@@ -210,33 +209,72 @@
   
         .price {
           font-size: 1rem;
-
-          strong {
-
-          }
         }
   
         .stock-label {
           color: #4da861;
-        }
-  
-        .description {
-          
-          h3 {
-            margin-bottom: 0.3rem;
-          }
-
-          p {
-            color: #6a6c77;
-            line-height: 1.4rem;
-          }
-        }
+        }         
       }
 
       .action-buttons {
         display: flex;
         align-items: center;
         width: 100%;
+        margin-bottom: 2rem;
+
+        button {
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 170px;
+          height: 36px;          
+          border-radius: 4px;
+          border: 1px solid #F72551; 
+          overflow: hidden;         
+
+          &::after {
+            content: '';
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.1);
+            transition: opacity .4s ease;            
+          }
+
+          &:hover::after {
+            opacity: 1;
+          }
+        }
+
+        .buy-now-btn {
+          margin-right: 1rem;
+          color: #fff;
+          background-color: #F72551;
+        }
+
+        .add-to-cart-btn {          
+          background-color: #fff;  
+
+          .material-icons {
+            margin-right: 0.5rem;
+            font-size: 1.3rem;
+          }
+        }
+      }
+
+      .description {         
+        h3 {
+          margin-bottom: 0.3rem;
+        }
+
+        p {
+          color: #6a6c77;
+          line-height: 1.4rem;
+        }
       }
     }
   }
