--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,9 +138,10 @@ img {
       justify-content: center;
       align-items: center;
       width: 170px;
-      height: 40px;
+      height: 36px;
       color: #fff;
-      border: 2px solid #F72551;
+      border: 1px solid #F72551;
+      border-radius: 4px;
     }
   }
 
