--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -1,1 +1,25 @@
-<p>variant-section works!</p>
+<div class="variant-wrapper">
+  <div class="variant-option">
+    <h3>Color:</h3>
+
+    <div class="option-flex">
+
+      <div class="option-icon">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/4193vZldXVL._SS36_.jpg">
+        <span>White</span>
+      </div>
+
+      <div class="option-icon">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/41VdOpdCX4L._SS36_.jpg">
+        <span>Black</span>
+      </div>
+
+      <div class="option-icon">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/419PMmp5u8L._SS36_.jpg">
+        <span>Black/Red</span>
+      </div>
+    </div>
+  </div>
+
+  
+</div>
