--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -68,6 +68,7 @@
         border: 1px solid #e7edff;
         border-radius: 2px;
         overflow: hidden;
+        cursor: zoom-in;
       }
 
       .thumbnail-wrapper {        
@@ -194,9 +195,11 @@
         .price, 
         .stock-label {
           margin-bottom: 1rem;
+          color: #4c4e5a;
         }
 
         .product-name {
+          color: #4c4e5a;
           font-size: 1.2rem;
           line-height: 1.5rem;
         }
@@ -209,6 +212,10 @@
   
         .price {
           font-size: 1rem;
+
+          strong {
+            color: #4c4e5a;
+          }
         }
   
         .stock-label {
@@ -227,6 +234,7 @@
 
       .action-buttons {
         display: flex;
+        // justify-content: center;
         align-items: center;
         width: 100%;
         margin-bottom: 2rem;
@@ -238,6 +246,7 @@
           align-items: center;
           width: 170px;
           height: 36px;          
+          color: #4c4e5a;
           border-radius: 4px;
           border: 1px solid #F72551; 
           overflow: hidden;         
@@ -265,24 +274,21 @@
           background-color: #F72551;
         }
 
-        .add-to-cart-btn {          
+        .add-to-cart-btn {        
           background-color: #fff;  
 
           .material-icons {
             margin-right: 0.5rem;
+            color: #4c4e5a;
             font-size: 1.3rem;
           }
         }
       }
 
       .description {         
-        h3 {
-          margin-bottom: 0.3rem;
-        }
-
         p {
           color: #6a6c77;
-          line-height: 1.4rem;
+          line-height: 1.7rem;
         }
       }
     }
