--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -21,5 +21,26 @@
     </div>
   </div>
 
-  
+  <div class="variant-option">
+    <h3>Size:</h3>
+
+    <div class="option-flex">
+
+      <div class="option-icon">       
+        <span>1TB</span>
+      </div>
+
+      <div class="option-icon">        
+        <span>512GB</span>
+      </div>
+
+      <div class="option-icon">       
+        <span>256GB</span>
+      </div>
+
+      <div class="option-icon">        
+        <span>128GB</span>
+      </div>
+    </div>
+  </div>
 </div>
