--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -66,7 +66,7 @@
         height: 600px;
         padding: 0.2rem;
         border: 1px solid #e7edff;
-        border-radius: 2px;
+        border-radius: 4px;
         overflow: hidden;
         cursor: zoom-in;
       }
@@ -76,7 +76,7 @@
         width: 100%;
         height: auto;
         margin-top: 1.5rem;
-        border-radius: 2px;
+        border-radius: 4px;
         overflow: hidden;
 
         .nav-btns {
@@ -136,7 +136,7 @@
         display: flex;
         width: 100%;
         height: auto;
-        border-radius: 2px;
+        border-radius: 4px;
         overflow: hidden;
         overflow-x: auto;
         scrollbar-width: none;
@@ -155,7 +155,7 @@
           padding: 0.1rem;
           margin-right: 0.5rem;
           border: 1px solid #e7edff;
-          border-radius: 2px;
+          border-radius: 4px;
           scroll-snap-align: center;
           transition: border-color 0.4s ease,
           background-color 0.4s ease;
@@ -234,7 +234,6 @@
 
       .action-buttons {
         display: flex;
-        // justify-content: center;
         align-items: center;
         width: 100%;
         margin-bottom: 2rem;
@@ -249,29 +248,18 @@
           color: #4c4e5a;
           border-radius: 4px;
           border: 1px solid #F72551; 
+          transition: background-color .4s ease;
           overflow: hidden;         
-
-          &::after {
-            content: '';
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.1);
-            transition: opacity .4s ease;            
-          }
-
-          &:hover::after {
-            opacity: 1;
-          }
         }
 
         .buy-now-btn {
           margin-right: 1rem;
           color: #fff;
           background-color: #F72551;
+
+          &:hover {
+            background-color: darken(#F72551, 5); 
+          }
         }
 
         .add-to-cart-btn {        
@@ -281,6 +269,10 @@
             margin-right: 0.5rem;
             color: #4c4e5a;
             font-size: 1.3rem;
+          }
+
+          &:hover {
+            background-color: #f6f8ff; 
           }
         }
       }
