--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -1,6 +1,6 @@
 .variant-wrapper {  
   width: 100%;
-  height: 100px;
+  height: auto;
 
   .variant-option {
     width: 100%;
@@ -21,15 +21,22 @@
 
       .option-icon {
         display: flex;
+        justify-content: center;
         align-items: center;
-        min-width: 70px;
+        min-width: 80px;
+        height: 36px;
         padding: 0.2rem 0.7rem;
-        border: 1px solid #2587f7;
+        border: 1px solid #e7edff;
         border-radius: 5px;
+        transition: background-color .4s ease;
         cursor: pointer;
 
         &:not(:last-of-type) {
           margin-right: 0.5rem;
+        }
+
+        &:hover {
+          background-color: #f6f8ff; 
         }
 
         &.selected {
@@ -37,7 +44,7 @@
         }
 
         img {
-          width: 35px;
+          width: 100%;
           height: 100%;
           margin-right: 0.5rem;
           object-fit: contain;
