--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -49,7 +49,7 @@
       <div class="product-information">  
         <div class="content">
           <h3 class="product-name">{{ product.productName }}</h3>
-          <p class="brand">By <span>{{ product.brand }}</span></p> 
+          <p class="brand">By: <span>{{ product.brand }}</span></p> 
           <p class="price">
             Price: <strong>{{ product.price | currency }}</strong>
           </p>
