--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -1,46 +1,58 @@
 <div class="variant-wrapper">
-  <div class="variant-option">
+  <section class="variant-option color">
     <h3>Color:</h3>
 
     <div class="option-flex">
-
-      <div class="option-icon">
+      <div class="option-icon-l selected">
         <img src="https://images-na.ssl-images-amazon.com/images/I/4193vZldXVL._SS36_.jpg">
         <span>White</span>
       </div>
 
-      <div class="option-icon">
+      <div class="option-icon-l">
         <img src="https://images-na.ssl-images-amazon.com/images/I/41VdOpdCX4L._SS36_.jpg">
         <span>Black</span>
       </div>
 
-      <div class="option-icon">
+      <div class="option-icon-l">
         <img src="https://images-na.ssl-images-amazon.com/images/I/419PMmp5u8L._SS36_.jpg">
         <span>Black/Red</span>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="variant-option">
+  <section class="variant-option size">
     <h3>Size:</h3>
 
     <div class="option-flex">
+      <div class="option-icon">       
+        <span>H1</span>
+      </div>
+
+      <div class="option-icon selected">        
+        <span>H510</span>
+      </div>
 
       <div class="option-icon">       
-        <span>1TB</span>
+        <span>H510 Elite</span>
       </div>
 
       <div class="option-icon">        
-        <span>512GB</span>
-      </div>
-
-      <div class="option-icon">       
-        <span>256GB</span>
-      </div>
-
-      <div class="option-icon">        
-        <span>128GB</span>
+        <span>H510i</span>
       </div>
     </div>
-  </div>
+  </section>
+
+  <section class="variant-option size">
+    <h3>Style:</h3>
+
+    <div class="option-flex">
+      <div class="option-icon selected">       
+        <span>i-Series</span>
+      </div>
+
+      <div class="option-icon">        
+        <span>Non i-Series</span>
+      </div>
+    </div>
+  </section>
 </div>
