--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -64,9 +64,9 @@
       .preview {
         width: 100%;
         height: 600px;
-        padding: 0.2rem;
-        border: 1px solid #e7edff;
-        border-radius: 4px;
+        // padding: 0.2rem;
+        // border: 1px solid #e7edff;
+        // border-radius: 4px;
         overflow: hidden;
         cursor: zoom-in;
       }
